--- a/array-cardio-day-1/index.html
+++ b/array-cardio-day-1/index.html
@@ -42,7 +42,7 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.lastName}`);
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
 
     console.log(fullNames);
 
